--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "gulp-cssbeautify": "latest",
     "gulp-csso": "latest",
     "gulp-imagemin": "latest",
+    "gulp-iconfont": "latest",
+    "gulp-ttf2woff": "latest",
+    "gulp-ttf2woff2": "latest",
     "gulp-uglify": "latest",
     "gulp-uncss": "latest",
     "gulp-useref": "latest"
